[package]
name = "analytics"
version = "1.0.0"
authors = ["Saurabh Raje <saurabh.mraje@gmail.com>"]
edition = "2018"
[profile.release]
debug = true
[dev-dependencies]
criterion="*"
[dependencies]
rayon_logs = {optional = true, path="../rayon-logs"}
time = "*"
grouille={path="../grouille"}
rayon="*"
itertools="*"
rand="*"
thread_binder={path="../thread_binder"}
[target.'cfg(feature = "rayonlogs")'.dependencies]
rayon_adaptive={path="../rayon-adaptive", default-features = false, features = ["logs"]}
[target.'cfg(not(feature = "rayonlogs"))'.dependencies]
rayon_adaptive={path="../rayon-adaptive"}
